# study-2

./: .gitignore
data-embedding/: job.sh
data-preparation/: compare.py  compute_network_metrics.py
data-processing/: checkgit.py  dummy.py  global_triple_statistics.py  gnn.py  history.py  matcher.py  perf-to-paper.py  project_evolution_statistics.py  requirements.txt  shared.py  svm_gnn.py  svm_time.py  trim.py  triple_statistics.py
gnn-spin/: notes.txdt  pipeline.sh  versions.json
gnn-spin/compacter/: Cargo.toml
gnn-spin/compacter/src/: main.rs  traversal.rs
gnn-spin/differ/: Cargo.toml
gnn-spin/downloader/: Cargo.toml
gnn-spin/downloader/src/: main.rs  schema.rs
gnn-spin/embedding/: base.py  job.sh  requirements.txt  run.sh
gnn-spin/gnn/: __main__.py  gcn.yaml  ml.py  requirements.txt  run.sh
gnn-spin/prepare-source/: Cargo.toml  run.sh
gnn-spin/prepare-source/src/: hierarchy.rs  language.rs  main.rs  prepare.rs  resolver.rs  select.rs
gnn-spin/structure/: Cargo.toml
intermediate-results/aspredictor/: SMELL-PREDICTION-AUX-apache-ant-package-cycle_prediction.CyclePrediction.txt  SMELL-PREDICTION-AUX-apache-camel-package-cycle_prediction.CyclePrediction.txt  SMELL-PREDICTION-AUX-apache-cxf-package-cycle_prediction.CyclePrediction.txt  SMELL-PREDICTION-AUX-apache-derby-package-cycle_prediction.CyclePrediction.txt
models/: gnn.py  requirements.txt  shared.py  svm.py
pipeline/: Cargo.toml
pipeline/src/: commands.rs  datasets.rs  file_structure.rs  graphs.rs  languages.rs  main.rs  replication.rs  source_downloader.rs  statistics.rs  utils.rs
pipeline/src/commands/: add_source_information_to_triples.rs  as_predictor_features_to_json.rs  compare_triple_predictions.rs  compute_project_evolution_statistics.rs  convert_as_predictor_output.rs  diff.rs  download_sources.rs  finalise_co_change_features.rs  generate_co_change_features.rs  generate_time_series_features.rs  generate_train_test_triples.rs  graphs_to_dot.rs  process_history.rs  summarise_triple_performance.rs
pipeline/src/datasets/: co_change.rs  co_change_2.rs  timeseries.rs  triples.rs
pipeline/src/graphs/: diff.rs  dot.rs  graph.rs  hierarchy.rs  loaders.rs
pipeline/src/graphs/loaders/: odem.rs  rsf.rs
pipeline/src/languages/: language.rs  mappers.rs
pipeline/src/languages/mappers/: java.rs
pipeline/src/processing/: history.rs
pipeline/src/replication/: as_predictor.rs
pipeline/src/replication/as_predictor/: developer.rs  similarities.rs
pipeline/src/statistics/: project_evolution.rs  shared.rs
pipeline/src/utils/: mapping.rs  metrics.rs  paths.rs  rsf.rs  tree.rs  trie.rs  versions.rs
py_scripts/: dummy.py  dummy_gnn.py  global_triple_statistics.py  shared.py  shared_plotting.py  svm.py  visualise_embeddings.py
replication/: compare.py  compute_network_metrics.py  learn.py  prepare_data.py  requirements.txt  visualise.py
replication/compute-features/: Cargo.toml
replication/compute-features/src/: csv_schema.rs  errors.rs  graph.rs  main.rs  output_schema.rs  xml_schema.rs
replication/compute-features/src/graph/: adjacency.rs  builder.rs  core.rs
scripts/: build_features.sh  dot.sh  dummy-figs.sh  history-feature-gen.sh  history-feature-gen_hb.sh  notes.txt  perf-figs.sh  run_dummy_gnn.sh  run_dummy_model.sh  run_gnn.sh  run_svm.sh  run_svm_gnn.sh  run_svm_history.sh  statistics.sh  visualise_as_predictor.sh  visualise_embeddings.sh
util/odem2dot/: odem2dot.py
util/triple2dot/: requirements.txt  triple2dot.py
(+10 files in other folders)
