[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["color", "derive"] }
itertools = { version = "0.13.*" }
log = {version = "0.4.22"}
flexi_logger = {  version = "0.29.*", features = ["colors"] }
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
quick-xml = {  version = "0.37.*", features = ["serde", "serialize"] }
regex = "1.11.1"
prettytable-rs = "0.10.0"