[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["color", "derive"] }
itertools = { version = "0.13.*" }
log = {version = "0.4.22"}
flexi_logger = {  version = "0.29.*", features = ["colors"] }
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
quick-xml = {  version = "0.37.*", features = ["serde", "serialize"] }
regex = "1.11.1"
prettytable-rs = "0.10.0"
git2 = "0.19.0"
zip = "2.2.0"
reqwest = {  version = "0.12.9", features = ["blocking"] }
md5 = "0.7.0"
sha1_smol = { version = "1.0.1", features = ["alloc", "std"] }
num-traits = "0.2.*"