[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
git2 = { version = "0.19.0" }
reqwest = { version = "0.12.8", features = ["blocking"]}
md5 = { version = "0.7.0" }
sha1_smol = { version = "1.0.1", features = ["alloc", "std"] }
#@tar = { version = "0.4.42" }
tempfile = "3.13.0"
zip = {version = "2.2.0"}
log = {version = "0.4.22"}
simple_logger = { version = "5.0.0" }
#flate2 = {  version = "1.0.34" }