[package]
name = "prepare-source"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["color", "derive"] }
log = {version = "0.4.22"}
logforth = {  version = "0.13.0", features = ["rolling_file"] }
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
quick-xml = {  version = "0.36.2", features = ["serde", "serialize"] }
regex = "1.11.1"