[package]
name = "compute-features"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = {version = "1.0.*", features = ["serde_derive"]}
serde_json = "1.0.*"
quick-xml = {version = "0.36.*", features = ["serde", "serialize"]}
error_set = "0.6.0"

nalgebra = "0.33.0"
regex = "1.11.0"
csv = "1.3.0"

indicatif = "0.17.8"